# vortex

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
cmake/: compiler-options-setup.cmake  setup-dependencies.cmake
cmake/debug/: dump-variables.cmake  get-all-targets.cmake
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/core/: sample.hpp
libs/core/include/core/common/: types.hpp
libs/core/include/core/settings/: static_settings_data_storage.hpp
libs/core/include/core/settings/json/: any_settings.hpp  document_repository.hpp  settings_provider.hpp
libs/core/src/: sample.cpp
libs/core/src/common/: types.cpp
libs/core/src/settings/: static_settings_data_storage.cpp
libs/core/src/settings/json/: any_settings.cpp  document_repository.cpp  settings_provider.cpp
libs/core/tests/: sample.test.cpp
libs/core/tests/common/: types.test.cpp
libs/core/tests/settings/: static_settings_data_storage.test.cpp
libs/core/tests/settings/json/: any_settings.test.cpp  document_repository.test.cpp  settings_provider.test.cpp
libs/runner/: CMakeLists.txt
libs/runner/include/runner/: sample.hpp
libs/runner/include/runner/config/: test_case.hpp  test_fixture.hpp  test_stage.hpp
libs/runner/include/runner/config/enums/: parallel_strategy_type.hpp  parallel_strategy_type_json_integration.hpp
libs/runner/include/runner/config/providers/: json_settings_provider.hpp
libs/runner/src/: sample.cpp
libs/runner/src/config/: test_case.cpp  test_fixture.cpp  test_stage.cpp
libs/runner/src/config/enums/: parallel_strategy_type.cpp
libs/runner/src/config/providers/: json_settings_provider.cpp
libs/runner/tests/: sample.test.cpp
libs/runner/tests/config/: test_case.test.cpp  test_fixture.test.cpp  test_stage.test.cpp
libs/runner/tests/config/enums/: parallel_strategy_type.test.cpp
libs/runner/tests/config/providers/: json_settings_provider.test.cpp
libs/testfw/src/config/: test_case.cpp  test_fixture.cpp  test_stage.cpp
libs/turb/: CMakeLists.txt
libs/turb/include/turb/legacy/: settings_provider.hpp  sim_id.hpp
libs/turb/include/turb/legacy/settings/: exec_settings.hpp  execution_settings.hpp  metadata.hpp  parameters.hpp  settings.hpp  turb_settings.hpp
libs/turb/include/turb/legacy/settings/enums/: drag_type.hpp  drag_type_json_integration.hpp  forcing_type.hpp  forcing_type_json_integration.hpp  gravity_mode.hpp  gravity_mode_json_integration.hpp  particle_mode.hpp  particle_mode_json_integration.hpp  particle_twc_kernel_type.hpp  particle_twc_kernel_type_json_integration.hpp  sim_method.hpp  sim_method_json_integration.hpp
libs/turb/include/turb/legacy/settings/providers/: json_settings_provider.hpp
libs/turb/include/turb/legacy/settings/stat/: execution_settings.hpp  execution_settings_conversion.hpp  metadata.hpp  metadata_conversion.hpp  parameters.hpp  parameters_conversion.hpp  settings.hpp  settings_conversion.hpp
libs/turb/src/: sample.cpp
libs/turb/src/legacy/: settings_provider.cpp  sim_id.cpp
libs/turb/src/legacy/settings/: exec_settings.cpp  execution_settings.cpp  metadata.cpp  parameters.cpp  settings.cpp  turb_settings.cpp
libs/turb/src/legacy/settings/enums/: drag_type.cpp  forcing_type.cpp  gravity_mode.cpp  particle_mode.cpp  particle_twc_kernel_type.cpp  sim_method.cpp
libs/turb/src/legacy/settings/providers/: json_settings_provider.cpp  json_settings_provider.hpp
libs/turb/src/legacy/settings/stat/: execution_settings.cpp  execution_settings_conversion.cpp  metadata.cpp  metadata_conversion.cpp  parameters.cpp  parameters_conversion.cpp  settings.cpp  settings_conversion.cpp
libs/turb/tests/: sample.test.cpp
libs/turb/tests/legacy/: settings_provider.test.cpp  sim_id.test.cpp
libs/turb/tests/legacy/settings/: exec_settings.test.cpp  execution_settings.test.cpp  metadata.test.cpp  parameters.test.cpp  settings.test.cpp  turb_settings.test.cpp
libs/turb/tests/legacy/settings/enums/: drag_type.test.cpp  forcing_type.test.cpp  gravity_mode.test.cpp  particle_mode.test.cpp  particle_twc_kernel_type.test.cpp  sim_method.test.cpp
libs/turb/tests/legacy/settings/providers/: json_settings_provider.hpp  json_settings_provider.test.cpp
libs/turb/tests/legacy/settings/stat/: execution_settings.test.cpp  execution_settings_conversion.test.cpp  metadata.test.cpp  metadata_conversion.test.cpp  parameters.test.cpp  parameters_conversion.test.cpp  settings.test.cpp  settings_conversion.test.cpp
libs/turb/tests/legacy/settings/static/: execution_settings.test.cpp  metadata.test.cpp  parameters.test.cpp  settings.test.cpp
libs/turbc/: CMakeLists.txt
libs/turbf/: CMakeLists.txt
samples/: CMakeLists.txt
samples/turb/basic/: CMakeLists.txt  basic-sample.cpp
samples/turbc/: CMakeLists.txt
samples/turbf/: CMakeLists.txt
tests/: CMakeLists.txt
tests/approval/: CMakeLists.txt
tests/dependency/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/sample/: CMakeLists.txt
tests/integration/sample/tests/: sample.test.cpp
tests/unit/: CMakeLists.txt
tools/settings-wizard/defs/: runner-test-case.toml  runner-test-fixture.toml  runner-test-stage.toml  testfw-test-case.toml  testfw-test-fixture.toml  testfw-test-stage.toml  turb-legacy-exec.toml  turb-legacy-execution-settings.toml  turb-legacy-metadata.toml  turb-legacy-parameters.toml  turb-legacy-settings.toml
tools/settings-wizard/src/: cpp_utils.py  gen.py  gen_cmake.py  gen_cpp.py  gen_cpp_enums.py  gen_cpp_properties.py  gen_cpp_providers.py  gen_cpp_static.py  gen_cpp_validation.py  gen_utils.py  utils.py  vxsw.py
